# testFFmpeg

./: .gitignore  AVCommon.cpp  AVCommon.h  Audio.cpp  Audio.h  AudioParams.cpp  AudioParams.h  CMakeLists.txt  Player.cpp  Player.h  README.md  Video.cpp  Video.h  VideoState.cpp  VideoState.h  main.cpp
codec/: DecodeHelper.cpp  DecodeHelper.h  MyFrame.cpp  MyFrame.h  MyPacket.cpp  MyPacket.h  TransferData.cpp  TransferData.h
display/: SDLDisplay.cpp  SDLDisplay.h
ffmpeg/include/libavutil/: ffversion.h
